# dataarmor-test-task

./: README.md
demo/: Deletes.js  Inserts.js  Queries.js  Selects.js  Updates.js  demo.sh
pgProxy/: .gitignore  CMakeLists.txt
pgProxy/src/: main.cpp  proxy.cpp  proxy_connection.cpp  query_logger.cpp
